@@ -1,5 +1,6 @@
 ﻿using System;
 using System.Collections.Generic;
+using System.Diagnostics;
 using System.Linq;
 using ArtificialVCM.Configuration;
 using Common.Entities;
@@ -61,7 +62,7 @@ namespace ArtificialVCM
                         var from = (int)(configuration.RandomFrom * 10);
                         var to = (int)(configuration.RandomTo * 10);
 
-                        importance = Math.Round(LinearUniformRandom.GetInstance.Next(from, to + 1) * 0.1, 2);
+                        importance = GenerateImportance(agent, configuration.RandomFrom, configuration.RandomTo);
                     }
                     else
                     {
@@ -80,29 +81,54 @@ namespace ArtificialVCM
             });
 
             //initializes initial anticipated influence for each kh and goal assigned to the agent
+            //agent.AssignedKnowledgeHeuristics.ForEach(kh =>
+            //{
+            //    Dictionary<string, double> source;
+
+            //    if (kh.AutoGenerated && agent.Prototype.DoNothingAnticipatedInfluence != null)
+            //    {
+            //        source = agent.Prototype.DoNothingAnticipatedInfluence;
+            //    }
+            //    else
+            //    {
+            //        agentConfiguration.AnticipatedInfluenceState.TryGetValue(kh.Id, out source);
+            //    }
+
+
+            //    Dictionary<Goal, double> inner = new Dictionary<Goal, double>();
+
+            //    agent.AssignedGoals.ForEach(g =>
+            //    {
+            //        inner.Add(g, source != null && source.ContainsKey(g.Name) ? source[g.Name] : 0);
+            //    });
+
+            //    agent.AnticipationInfluence.Add(kh, inner);
+            //});
+
+            //manually initialize AI
             agent.AssignedKnowledgeHeuristics.ForEach(kh =>
             {
-                Dictionary<string, double> source;
-
-                if (kh.AutoGenerated && agent.Prototype.DoNothingAnticipatedInfluence != null)
-                {
-                    source = agent.Prototype.DoNothingAnticipatedInfluence;
-                }
-                else
-                {
-                    agentConfiguration.AnticipatedInfluenceState.TryGetValue(kh.Id, out source);
-                }
-
+                var goal1 = agent.AssignedGoals.First(g => g.Name == "G1");
+                var goal2 = agent.AssignedGoals.First(g => g.Name == "G2");
 
                 Dictionary<Goal, double> inner = new Dictionary<Goal, double>();
 
-                agent.AssignedGoals.ForEach(g =>
+                if (kh.PositionNumber == 1)
                 {
-                    inner.Add(g, source != null && source.ContainsKey(g.Name) ? source[g.Name] : 0);
-                });
+                    inner.Add(goal1, agent[AlgorithmVariables.E]);
+                    inner.Add(goal2, agent[AlgorithmVariables.E] - 1);
+                }
+
+                if (kh.PositionNumber == 2)
+                {
+                    inner.Add(goal1, 0);
+                    inner.Add(goal2, agent[AlgorithmVariables.E]);
+                }
 
                 agent.AnticipationInfluence.Add(kh, inner);
             });
+
+            InitializeDynamicvariables(agent);
 
 
             //applying transforms
@@ -149,6 +175,34 @@ namespace ArtificialVCM
             agent.AgentStateConfiguration = agentConfiguration;
 
             return agent;
+        }
+
+        private static void InitializeDynamicvariables(ArtificialVCMAgent agent)
+        {
+            var e = agent[AlgorithmVariables.E];
+            var m = agent[AlgorithmVariables.M];
+            var importance = agent[AlgorithmVariables.G2Importance];
+
+            agent[AlgorithmVariables.AgentProfit] = e * (1 - importance * (1 - m));
+            agent[AlgorithmVariables.AgentC] = agent[AlgorithmVariables.AgentProfit];
+            //agent[AlgorithmVariables.CommonProfit] = e * importance;
+        }
+
+        private static double GenerateImportance(ArtificialVCMAgent agent, double min, double max)
+        {
+            double rand;
+
+            if (agent.ContainsVariable(AlgorithmVariables.Mean) && agent.ContainsVariable(AlgorithmVariables.StdDev))
+                rand = NormalDistributionRandom.GetInstance.Next(agent[AlgorithmVariables.Mean], agent[AlgorithmVariables.StdDev]);
+            else
+                rand = NormalDistributionRandom.GetInstance.Next();
+
+            rand = Math.Round(rand, 1, MidpointRounding.AwayFromZero);
+
+            if (rand < min || rand > max)
+                return GenerateImportance(agent, min, max);
+
+            return rand;
         }
     }
 }
