@@ -32,4 +32,4 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.7.0")]
-[assembly: AssemblyVersion("1.0.1.6474")]
+[assembly: AssemblyVersion("1.0.2.6484")]
